[Issue 83] Fix look of `test_widget_overlap` dashboard.
Adds table styling and introduces bootstrap CSS compilation.

(c) Copyright IBM Corp. 2016

--- a/less/rendered-html.less
+++ b/less/rendered-html.less
@@ -7,6 +7,8 @@
  * Match notebook styles for rendered html
  */
 
+@rendered_html_border_color: #333;
+
 .rendered_html {
     // For a 14px base font size this goes as:
     // font-size = 26, 22, 18, 14, 12, 12
@@ -23,6 +25,28 @@
     h2:first-child { margin-top: 0.636em; }
     h3:first-child { margin-top: 0.777em; }
     h4, h5, h6 { &:first-child { margin-top: 1em; } }
+
+    table {
+        border: 1px solid @rendered_html_border_color;
+        border-collapse: collapse;
+
+        tr, th, td {
+            border: 1px solid @rendered_html_border_color;
+            border-collapse: collapse;
+            margin: 1em 2em;
+        }
+        td, th {
+            text-align: left;
+            vertical-align: middle;
+            padding: 4px;
+        }
+        th {
+            font-weight: bold;
+        }
+        &:not(:first-child) {
+            margin-top: 1em;
+        }
+    }
 
     p {
         margin: 0;
